--- a/technical-homework-4/technical-homework-4.csproj
+++ b/technical-homework-4/technical-homework-4.csproj
@@ -70,6 +70,7 @@
     <Content Include="CustomerService.aspx" />
     <Content Include="FulfillOrder.aspx" />
     <Content Include="MedicationRecord.aspx" />
+    <Content Include="stylesheet.css" />
     <Content Include="Veterinarian.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
